# judgekit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
src/judgekit/: __init__.py  agreement.py  bias.py  calibration.py  cli.py  drift.py  exceptions.py  harness.py  judge.py  pairwise.py  persistence.py  report.py
tests/: test_agreement.py  test_bias.py  test_calibration.py  test_cli.py  test_drift.py  test_harness.py  test_pairwise.py  test_persistence.py  test_report.py
