[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "judgekit"
dynamic = ["version"]
description = "Calibrate, monitor, and refuse to ship miscalibrated LLM judges."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Abdulmunim Jemal", email = "abdulmunimjemal@gmail.com" }]
keywords = ["llm", "evals", "judge", "calibration", "drift", "ai-engineering"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed",
]
dependencies = [
  # Pin major-version ceilings so a numpy/scipy/sklearn major bump doesn't
  # silently break consumers of a frozen v1.x line.
  "numpy>=1.26,<3",
  "scipy>=1.11,<2",
  "scikit-learn>=1.4,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
  # Test-only: reference statistical implementations validated against
  # in tests/test_agreement.py. NOT runtime deps of judgekit itself.
  "statsmodels>=0.14",
  "krippendorff>=0.6",
  # Test the [report] extra in CI.
  "plotly>=5.20,<7",
  "jinja2>=3.1,<4",
  # Build/publish tooling.
  "build>=1.2",
  "twine>=5.0",
]
report = [
  "plotly>=5.20,<7",
  "jinja2>=3.1,<4",
]
all = [
  "judgekit[report]",
]

[project.scripts]
judgekit = "judgekit.cli:main"

[project.urls]
Homepage = "https://github.com/abdulmunimjemal/judgekit"
Issues = "https://github.com/abdulmunimjemal/judgekit/issues"

[tool.hatch.version]
path = "src/judgekit/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
  "src/judgekit",
  "tests",
  "README.md",
  "CHANGELOG.md",
  "CONTRIBUTING.md",
  "LICENSE",
  "pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["src/judgekit"]
# Include the PEP 561 py.typed marker so downstream typecheckers
# (mypy, pyright) read our type annotations.
[tool.hatch.build.targets.wheel.force-include]
"src/judgekit/py.typed" = "judgekit/py.typed"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
# RUF002 flags Greek letters and unicode math symbols as ambiguous; we use
# them intentionally in math-heavy docstrings (κ, α, σ, μ, ∞, …).
ignore = ["E501", "RUF002"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
# sklearn and scipy don't ship py.typed markers as of their current releases;
# missing-imports is expected.
module = ["sklearn.*", "scipy.*", "statsmodels.*", "krippendorff.*", "plotly.*", "jinja2.*"]
ignore_missing_imports = true
